[gd_scene load_steps=15 format=2]

[ext_resource path="res://UI/HealthUI.tscn" type="PackedScene" id=1]
[ext_resource path="res://pixil-frame-0 (24).png" type="Texture" id=2]
[ext_resource path="res://ZUGWEG.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Investigation.gd" type="Script" id=4]
[ext_resource path="res://Music/OST 2 Edit 1 Export 1.mp3" type="AudioStream" id=5]
[ext_resource path="res://joker.png" type="Texture" id=6]

[sub_resource type="GDScript" id=1]
script/source = "extends Control

var hearts = 4 setget set_hearts
var max_hearts = 4 setget set_max_hearts

onready var heartUIFull = $HeartUIFull
onready var heartUIEmpty = $HeartUIEmpty

func set_hearts(value):
	hearts = clamp(value, 0, max_hearts)
	if heartUIFull != null:
		heartUIFull.rect_size.x = hearts * 15
	
func set_max_hearts(value):
	max_hearts = max(value, 1)
	self.hearts = min(hearts, max_hearts)
	if heartUIEmpty != null:
		heartUIEmpty.rect_size.x = max_hearts * 15
	
func _ready():
	self.max_hearts = PlayerStats.max_health
	self.hearts = PlayerStats.health
	PlayerStats.connect(\"health_changed\", self, \"set_hearts\")
	PlayerStats.connect(\"max_health_changed\", self, \"set_max_hearts\")
"

[sub_resource type="GDScript" id=2]
script/source = "extends ColorRect

onready var label = $Label
onready var colorRect = self
onready var joker = get_parent().get_parent().get_node(\"AnimatedSprite\")

var textPiece = ''
var randomNum = 0

func text(value):
	colorRect.visible = true
	textPiece = ''
	for i in range(len(value)):
		textPiece += value[i]
		label.text = textPiece
		yield(get_tree().create_timer(0.05), \"timeout\")
		colorRect.visible = true
		randomNum = rand_range(0, 20)
		if randomNum < 5:
			joker.frame = randomNum
	joker.frame = 0
	yield(get_tree().create_timer(len(value) - 2), \"timeout\")
	colorRect.visible = false


func _ready():
	randomize()
	colorRect.visible = false
"

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Investigation" type="Node2D"]
script = ExtResource( 4 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HealthUI" parent="CanvasLayer" instance=ExtResource( 1 )]
script = SubResource( 1 )

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
margin_left = 22.0
margin_top = 128.0
margin_right = 301.0
margin_bottom = 174.0
color = Color( 0.215686, 0.188235, 0.188235, 0.192157 )
script = SubResource( 2 )

[node name="Label" type="Label" parent="CanvasLayer/ColorRect"]
margin_right = 276.0
margin_bottom = 43.0
text = "Test"
autowrap = true

[node name="CanvasModulate" type="CanvasModulate" parent="CanvasLayer"]
visible = false
color = Color( 0.654902, 0.129412, 0.129412, 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 162, 47 )
scale = Vector2( 1.54688, 1.67188 )
frames = SubResource( 8 )

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 9.0
margin_top = 37.0
margin_right = 165.0
margin_bottom = 225.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 2 )
expand = true

[node name="Label" type="Label" parent="TextureButton"]
margin_left = 7.0
margin_top = 47.0
margin_right = 129.0
margin_bottom = 117.0
text = "Test "
autowrap = true

[node name="TextureButton2" type="TextureButton" parent="."]
margin_left = 172.0
margin_top = 33.0
margin_right = 315.0
margin_bottom = 227.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 2 )
expand = true

[node name="Label" type="Label" parent="TextureButton2"]
modulate = Color( 1, 0.0313726, 0.0313726, 1 )
margin_left = 8.0
margin_top = 47.0
margin_right = 115.0
margin_bottom = 107.0
text = "Test"
autowrap = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = 24.0
pitch_scale = 0.8
autoplay = true

[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="TextureButton2" to="." method="_on_TextureButton2_pressed"]
